--- a/project-class1/src/components/navBar.css
+++ b/project-class1/src/components/navBar.css
@@ -1,3 +1,25 @@
+* {
+  font-family: raleway;
+}
+
+@media (min-width: 500px) {
+  .navbar-expand-lg .navbar-collapse {
+      display: flex!important;
+      flex-basis: auto;
+      flex-direction: column;}
+  }
+
+.titulo {
+  text-align: center;
+  margin-top: 13px;
+}
+
+h1 {
+  text-align: center;
+  color: black;
+  font-size: 35px;
+}
+
 .css-navbar {
   width: auto;
   height: 40px;
