--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,15 @@
   margin: 10px 10px 15px 10px;
 }
 
+
+/* CLASS BUTTON REGISTRATION */ 
+.boton-registro{
+  text-align: center;
+  margin-bottom: 10px;
+}
+.btn-registration {
+  font-size: 25px;
+  text-align: center;
+  background-color: #212529;
+  color: #b9b4b4; 
+}
